	* Fixed bug #16639: DBAL auto-loading rendered the Install Tool unuseable (was switching mode to "123")
	* Added Feature #16610: Provide a SwiftMailer transport that only saves send mails to files (mbox format)

2010-12-01  Francois Suter  <francois@typo3.org>

	* Feature #16609: Usability: Add new label for workspace preview

2010-12-01  Steffen Kamper  <steffen@typo3.org>

	* Added Feature #16642: New extension manager part 2: Add ExtJs Module
	* Follow-up to #16234: ExtDirect Dataprovider for user settings
	* Added Feature #16641: Here comes FAL - beta2 version
	* Fixed bug #16234: ExtDirect Dataprovider for user settings
	* Follow-up to bug #16624: Decrease opacity of black ExtJS mask - make mask message readable
	* Fixed bug #16626: Improve ExtJS grid styling (Thanks to Timo Koenig and Lars Zimmermann)
	* Fixed bug #16622: PageTree - Milestone 2 Release (Thanks to Stefan Galinski and Peter Foerger)
	* Fixed bug #16621: Stabilize the Context Menu API (Thanks to Stefan Galinski)
	* Fixed bug #16463: Bug: Custom configured modules can't be enabled for non-admins (Thanks to Bastian Waidelich)
	* Fixed bug #16091: ExtDirect calls get cached with domain resulting in "unable to connect to the server" exceptions (Thanks to Andreas Kiessling)

2010-12-01  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL to version 1.2.0beta2

2010-12-01  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #16591 The new Swift Mailer should be used by TYPO3 for sending all kinds of mail

2010-12-01  Steffen Ritter  <typo3@steffen-ritter.net>

	* Fixed Bug #16613: CleanUp alt_db_navframe.php to work with new workspaces module
	* Fixed Bug #16218: TCE-Forms does not use sprite icons -- this leads to inconsistency
	* Fixed Bug #16635: TCA Tree does not save collapse/expand state
	* Follow up #16234: ExtDirect Dataprovider for user settings

2010-12-01  Sebastian Kurfuerst  <sebastian@typo3.org>
